--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <div class="contact-box">
           <div class="contact-elements"> 
           <h1>Get in touch</h1>
-          <form action="https://formsubmit.co/9baa868a1cf090cef3d213e97dfe0df6" method="post" accept-charset="utf-8">
+          <form >
           <input type="text" name="name" id="name" placeholder="Your Name" value="" required="true" />
           <input type="email" name="email" id="email" placeholder="Your Email Adress" value="" required="true" />
           <input type="text" name="subject" id="subject" placeholder="Subject" value="" required="true" />
